--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,17 @@
 <resources>
     <string name="app_name">슬기로운 병영생활</string>
 
-    <string name="activity_main_placeholder_login">아이디</string>
-    <string name="activity_main_placeholder_password">비밀번호</string>
-    <string name="activity_main_button_login">로그인</string>
-    <string name="activity_main_button_register">회원가입</string>
+    <string name="activity_login_placeholder_login">아이디</string>
+    <string name="activity_login_placeholder_password">비밀번호</string>
+    <string name="activity_login_button_login">로그인</string>
+    <string name="activity_login_button_register">회원가입</string>
+    <string name="activity_login_toast_welcome">환영합니다 :)</string>
+    <string name="activity_login_toast_error">로그인중에 오류가 발생했어요 :(\n\n%s</string>
+    <string name="activity_login_toast_confirm_password">비밀번호가 일치하지 않아요</string>
+    <string name="activity_login_toast_non_exist_id">존재하지 않는 아이디에요</string>
+    <string name="activity_login_toast_confirm_all_filed">모두 다 입력해 주세요.</string>
+
+    <string name="activity_register_toast_error">가입중에 오류가 발생했어요 :(\n\n%s</string>
+    <string name="activity_register_button_label">가입하기</string>
+    <string name="activity_register_placeholder_age">나이</string>
 </resources>
