--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,9 +11,10 @@
     <string name="activity_login_toast_non_exist_id">존재하지 않는 아이디에요</string>
     <string name="activity_login_toast_confirm_all_filed">모두 다 입력해 주세요</string>
 
-    <string name="activity_register_toast_error">가입중에 오류가 발생했어요 😓\n\n%s</string>
     <string name="activity_register_button_label">가입하기</string>
     <string name="activity_register_placeholder_age">나이</string>
+    <string name="activity_register_toast_error">가입중에 오류가 발생했어요 😓\n\n%s</string>
+    <string name="activity_register_toast_confirm_age">나이를 정확하게 입력해주세요</string>
 
     <string name="activity_main_button_check_temp">체온 체크</string>
     <string name="activity_main_button_check_vaccine">백신 여부</string>
@@ -21,10 +22,10 @@
     <string name="activity_main_button_logout">로그아웃</string>
     <string name="activity_main_toast_logouted">로그아웃 되었어요</string>
 
+    <string name="activity_check_temp_icon">°C</string>
     <string name="activity_check_temp_button_done">완료</string>
     <string name="activity_check_temp_placeholder_365">36.5</string>
-    <string name="activity_check_temp_icon">°C</string>
-    <string name="activity_check_temp_toast_confirm_temp">온도를 입력해 주세요</string>
+    <string name="activity_check_temp_toast_confirm_temp">체온을 정확히 입력해 주세요</string>
     <string name="activity_check_temp_toast_upload_temp">체온 등록이 되었어요</string>
     <string name="activity_check_temp_toast_error">등록중에 오류가 발생했어요 😓\n\n%s</string>
 </resources>
