--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,8 +32,10 @@
     <string name="activity_check_vaccine_toast_uploaded">백신 여부 등록이 되었어요 😊</string>
     <string name="activity_check_vaccine_toast_confirm_all_field">모두 선택해 주세요</string>
 
-    <string name="activity_notice_toast_error">공지를 불러오는 중에 오류가 발생했어요 😓\n\n%s</string>
+    <string name="activity_notice_toast_loading_error">공지를 불러오는 중에 오류가 발생했어요 😓\n\n%s</string>
+    <string name="activity_notice_toast_delete_error">공지를 삭제하는 중에 오류가 발생했어요 😓\n\n%s</string>
     <string name="activity_notice_empty">공지가 비었어요 😢</string>
+    <string name="activity_notice_toast_deleted">해당 공지가 삭제되었어요</string>
 
     <string name="activity_notice_add_toast_error">공지를 등록하는 중에 오류가 발생했어요 😓\n\n%s</string>
     <string name="activity_notice_add_toast_success_post">공지 등록 성공!\n위에서 아래로 스와이프하여 공지를 새로고침 해주세요</string>
