--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,14 +6,12 @@
     <string name="activity_login_button_login">로그인</string>
     <string name="activity_login_button_register">회원가입</string>
     <string name="activity_login_toast_welcome">환영합니다 😄</string>
-    <string name="activity_login_toast_error">로그인중에 오류가 발생했어요 😓\n\n%s</string>
     <string name="activity_login_toast_confirm_password">비밀번호가 일치하지 않아요</string>
     <string name="activity_login_toast_non_exist_id">존재하지 않는 아이디에요</string>
     <string name="activity_login_toast_confirm_all_filed">모두 다 입력해 주세요</string>
 
     <string name="activity_register_button_label">가입하기</string>
     <string name="activity_register_placeholder_age">나이</string>
-    <string name="activity_register_toast_error">가입중에 오류가 발생했어요 😓\n\n%s</string>
     <string name="activity_register_toast_confirm_age">나이를 정확하게 입력해주세요</string>
 
     <string name="activity_main_button_check_temp">체온 체크</string>
@@ -27,17 +25,15 @@
     <string name="activity_check_temp_placeholder_365">36.5</string>
     <string name="activity_check_temp_toast_confirm">체온을 정확히 입력해 주세요</string>
     <string name="activity_check_temp_toast_uploaded">체온 등록이 되었어요 😊</string>
-    <string name="activity_check_temp_toast_error">등록중에 오류가 발생했어요 😓\n\n%s</string>
+    <string name="activity_check_temp_empty">체온측정 한 사람이 없어요 😢</string>
 
     <string name="activity_check_vaccine_toast_uploaded">백신 여부 등록이 되었어요 😊</string>
     <string name="activity_check_vaccine_toast_confirm_all_field">모두 선택해 주세요</string>
+    <string name="activity_check_vaccine_empty">백신 접종 한 사람이 없어요 😢</string>
 
-    <string name="activity_notice_toast_loading_error">공지를 불러오는 중에 오류가 발생했어요 😓\n\n%s</string>
-    <string name="activity_notice_toast_delete_error">공지를 삭제하는 중에 오류가 발생했어요 😓\n\n%s</string>
     <string name="activity_notice_empty">공지가 비었어요 😢</string>
     <string name="activity_notice_toast_deleted">해당 공지가 삭제되었어요</string>
 
-    <string name="activity_notice_add_toast_error">공지를 등록하는 중에 오류가 발생했어요 😓\n\n%s</string>
     <string name="activity_notice_add_toast_success_post">공지 등록 성공!\n위에서 아래로 스와이프하여 공지를 새로고침 해주세요</string>
     <string name="activity_notice_add_toast_confirm_all_fields">모두 입력해 주세요</string>
     <string name="activity_notice_add_placeholder_title">제목…</string>
